# self-study-by-c

./: .gitignore  README.md
chapter2/: 01_code_style_names.c  01_hello_world.c  CMakeLists.txt
chapter3/: 02_data_types_char.c  03_data_types_float.c  04_constant.c  06_operators.c  07_condition.c  09.guess_number.c  CMakeLists.txt
chapter4/: 01_function_basics.c  02.proto_type.c  03.variable_types_and_scope.c  04_varargs.c  05_recursion.c  06_hanoi.c  CMakeLists.txt
chapter5/: 01_file_include.c  02_my_include_file.c  03_macro_function.c  04_conditional_macro.c  05_printlnf.c  CMakeLists.txt  readme.MD
chapter5/include/: factorial.h
chapter5/src/: factorial.c
chapter6/: 01_array_basics.c  02_array_limits.c  03_string.c  04_array_parameter.c  05_2d_array.c  07_quick_sort.c  CMakeLists.txt  readme.MD
